start setting up add store form

--- a/variables.env
+++ b/variables.env
@@ -1,6 +1,5 @@
 NODE_ENV=development
-DATABASE=
-mongodb://mattierocks:deliciousdang18@ds221228.mlab.com:21228/learn-node-delicious
+DATABASE=mongodb://mattierocks:deliciousdang18@ds221228.mlab.com:21228/learn-node-delicious
 
 MAIL_USER=123
 MAIL_PASS=123
