--- a/variables.env
+++ b/variables.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 DATABASE=mongodb://mattierocks:deliciousdang18@ds221228.mlab.com:21228/learn-node-delicious
 
-MAIL_USER=123
-MAIL_PASS=123
+MAIL_USER=af84e1cdad3450
+MAIL_PASS=5b07e8e9cda8fc
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 PORT=7777
